# ImageDecoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.md  zlib.patch
.github/workflows/: cmake.yml
Source/: Decoder.h  Export.h  Utils.cpp  Utils.h
Source/Decoder/: Decoder.cpp  Decoder.h
Source/Utils/: Utils.cpp  Utils.h
Source/Wrapper/: BmpImageSupport.cpp  BmpImageSupport.h  IImageWrapper.h  IImageWrapperModule.h  ImageWrapperBase.cpp  ImageWrapperBase.h  ImageWrapperModule.cpp
Source/Wrapper/Formats/: BmpImageWrapper.cpp  BmpImageWrapper.h  ExrImageWrapper.cpp  ExrImageWrapper.h  IcoImageWrapper.cpp  IcoImageWrapper.h  JpegImageWrapper.cpp  JpegImageWrapper.h  PngImageWrapper.cpp  PngImageWrapper.h
Test/: main.cpp
Tools/nasm-2.15.05-macosx/man1/: nasm.1  ndisasm.1
